--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Secrets like the one below should go into `.env.local` instead to avoid pushing
 # them to a repository.
-NEXT_PUBLIC_REST_API_ENDPOINT="http://localhost:8000"
+NEXT_PUBLIC_REST_API_ENDPOINT="https://samara-api.appaa-cameroun.net"
 NEXT_PUBLIC_SHOP_URL="http://localhost:3002"
 NEXT_PUBLIC_GOOGLE_MAP_API_KEY=AIzaSyC0CS23y_mKS12OOsaQusX39oXGmtX9KMo
 NEXT_PUBLIC_DEFAULT_LANGUAGE=en
