--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_GOOGLE_MAP_API_KEY=AIzaSyC0CS23y_mKS12OOsaQusX39oXGmtX9KMo
 NEXT_PUBLIC_DEFAULT_LANGUAGE=en
 NEXT_PUBLIC_ENABLE_MULTI_LANG=false
 NEXT_PUBLIC_AVAILABLE_LANGUAGES=en
+APPLICATION_MODE="production"
