--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 NEXT_PUBLIC_REST_API_ENDPOINT="https://api.livadoo.com"
 NEXT_PUBLIC_SHOP_URL="http://admin.livadoo.com"
 NEXT_PUBLIC_GOOGLE_MAP_API_KEY=AIzaSyC0CS23y_mKS12OOsaQusX39oXGmtX9KMo
-NEXT_PUBLIC_DEFAULT_LANGUAGE=en
+NEXT_PUBLIC_DEFAULT_LANGUAGE=fr
 NEXT_PUBLIC_ENABLE_MULTI_LANG=false
-NEXT_PUBLIC_AVAILABLE_LANGUAGES=en
+NEXT_PUBLIC_AVAILABLE_LANGUAGES=fr,en
 APPLICATION_MODE="production"
