--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,24 @@
 {
   "env": {
-    "NEXT_PUBLIC_REST_API_ENDPOINT": "",
-    "NEXT_PUBLIC_SHOP_URL": "",
+    "NEXT_PUBLIC_REST_API_ENDPOINT": "https://api.livadoo.com",
+    "NEXT_PUBLIC_SHOP_URL": "http://livadoo.com",
     "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": "",
     "NEXT_PUBLIC_AUTH_TOKEN_KEY": "AUTH_CRED",
     "APPLICATION_MODE": "production",
-    "NEXT_PUBLIC_DEFAULT_LANGUAGE": "en",
-    "NEXT_PUBLIC_ENABLE_MULTI_LANG": "false",
-    "NEXT_PUBLIC_AVAILABLE_LANGUAGES": "en"
+    "NEXT_PUBLIC_DEFAULT_LANGUAGE": "fr",
+    "NEXT_PUBLIC_ENABLE_MULTI_LANG": "true",
+    "NEXT_PUBLIC_AVAILABLE_LANGUAGES": "fr,en"
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_REST_API_ENDPOINT": "",
-      "NEXT_PUBLIC_SHOP_URL": "",
+      "NEXT_PUBLIC_REST_API_ENDPOINT": "https://api.livadoo.com",
+      "NEXT_PUBLIC_SHOP_URL": "http://livadoo.com",
       "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": "",
       "NEXT_PUBLIC_AUTH_TOKEN_KEY": "AUTH_CRED",
       "APPLICATION_MODE": "production",
       "NEXT_PUBLIC_DEFAULT_LANGUAGE": "en",
-      "NEXT_PUBLIC_ENABLE_MULTI_LANG": "false",
-      "NEXT_PUBLIC_AVAILABLE_LANGUAGES": "en"
+      "NEXT_PUBLIC_ENABLE_MULTI_LANG": "true",
+      "NEXT_PUBLIC_AVAILABLE_LANGUAGES": "fr,en"
     }
   }
 }
